<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="description_search_button">search</string>
    <string name="logo_name"> © IT Man AS</string>
    <string name="app_name">SecureCall</string>
    <string name="title_name"> Secure Communication</string>
    <string name="infor">Secure calling</string>
    <string name="action_settings">About</string>
    <string name="action_settings2">Settings</string>
    <string name="action_settings3">Log out</string>
    <string name="action_settings4">Terms Of Service</string>
    <string name="action_settings5">Cancel Subscription</string>
    <string name="sms_menu1">Inbox</string>
    <string name="sms_menu2">Sent</string>
    <string name="sms_menu3">Delete</string>
    <string name="all">All</string>
     <string name="bluetooth">Bluetooth</string>
    <string name="legal_information">Legal information</string>
    <string name="another_application_use_sip_port">Another application is currently using SIP port! Can\'t start !!!</string>
    <string name="invalid_sip_uri">Sip uri is invalid for call</string>
    <string name="contactAddress">SIP Address to contact</string>
    <string name="service_ticker_registered_text">SIP Registered</string>
    <string name="ongoing_call">Callin</string>
    <string name="voice_mail">Voice mail</string>
    <string name="talk">Talk</string>
    <string name="missed_call">Missedcall</string>
    <string name="uri_nbr">Phone number</string>
    <string name="uri_im">IM with custom SIP scheme</string>
    <string name="uri_sip">Internet call</string>
    <string name="cant_write_file">Error </string>
    <string name="fdnListLabel">FDN list</string>
    <string name="acct_unregistered">Unregistered</string>
    <string name="acct_registered">User OK</string>
    <string name="acct_inactive">Inactive Account</string>
    <string name="acct_registering">Registering...</string>
    <string name="acct_regerror">Error on registering</string>
    <string name="acct_regfailed">Registration Failed</string>
    <string name="not_configured_multiple_calls">Not configured</string>
    <string name="done">Done</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="take_call">Answer</string>
    <string name="hold_call">Hold</string>
    <string name="clear_call">Clear all</string>
    <string name="gsm">Mobile</string>
    <string name="add_account">Add user</string>
    <string name="reorder">Reorder</string>
    <string name="backup_restore">Backup / Restore</string>
    <string name="backup">Backup</string>
    <string name="faq">FAQ</string>
    <string name="help">Help</string>
    <string name="record_logs">Record logs to send it to dev team and report a bug</string>
    <string name="send_logs">Stop recording logs (OPTIONALLY send it)</string>
    <string name="view_existing_issues">Consult existing issues</string>
    <string name="deactivate_account">Deactivate account</string>
    <string name="activate_account">Deactivate account</string>
    <string name="delete_account">Delete account</string>
    <string name="modify_account">Modify account</string>
    <string name="choose_wizard">Choose wizard</string>
<string name="home"></string>
    <string name="hint_email">E-mail</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Full Name</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome..</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Full Name</string>
    <string name="use_pstn">Use PSTN</string>
    <string name="empty_description"></string>
    <string name="busy">busy</string>
    <string name="away">away</string>
    <string name="connection_not_valid">No Connection</string>
    <string name="unknown">Unknown</string>
    <string name="private_num">Private number</string>
    <string name="payphone">Pay phone</string>
    <string name="onHold">On hold</string>
    <string name="callFailed_userBusy">Line busy</string>
    <string name="callFailed_congestion">Network busy</string>
    <string name="callFailed_timedOut">No response, timed out</string>
    <string name="callFailed_server_unreachable">Server unreachable</string>
    <string name="callFailed_number_unreachable">Number unreachable</string>
    <string name="callFailed_invalid_credentials">Incorrect username or password</string>
    <string name="callFailed_out_of_network">Called from out-of-network</string>
    <string name="callFailed_server_error">Server error. Try again later.</string>
    <string name="callFailed_noSignal">No signal</string>
    <string name="callFailed_limitExceeded">ACM limit exceeded</string>
    <string name="callFailed_powerOff">Radio off</string>
    <string name="callFailed_simError">No SIM or SIM error</string>
    <string name="callFailed_outOfService">Out of service area</string>
    <string name="callFailed_fdn_only">Outgoing calls are restricted by FDN.</string>
    <string name="callFailed_cb_enabled">You can\'t make outgoing calls while call barring is on.</string>
    <string name="callFailed_dsac_restricted">All calls are restricted by access control.</string>
    <string name="callFailed_dsac_restricted_emergency">Emergency calls are restricted by access control.</string>
    <string name="callFailed_dsac_restricted_normal">Normal calls are restricted by access control.</string>
    <string name="callFailed_unobtainable_number">Invalid number</string>
    <string name="confCall">Conference call</string>
    <string name="call_lost">Call has been lost.</string>
    <string name="ok">OK</string>
    <string name="mmiStarted">MMI code started</string>
    <string name="ussdRunning">USSD code running\u2026</string>
    <string name="mmiCancelled">MMI code canceled</string>
    <string name="cancel">Cancel</string>
    <string name="manageConferenceLabel">Manage conference call</string>
    <string name="audio_mode_speaker">Speaker</string>
    <string name="audio_mode_earpiece">Handset earpiece</string>
    <string name="audio_mode_wired_headset">Wired headset</string>
    <string name="audio_mode_bluetooth">Bluetooth</string>
    <string name="wait_prompt_str">Send the following tones?\n</string>
    <string name="pause_prompt_str">Sending tones\n</string>
    <string name="send_button">Send</string>
    <string name="pause_prompt_yes">Yes</string>
    <string name="pause_prompt_no">No</string>
    <string name="wild_prompt_str">Replace wild character with</string>
    <string name="no_vm_number">Missing voicemail number</string>
    <string name="no_vm_number_msg">No voicemail number is stored on the SIM card.</string>
    <string name="add_vm_number_str">Add number</string>
    <string name="puk_unlocked">Your SIM card has been unblocked. Your phone is unlocking\u2026</string>
    <string name="label_ndp">SIM network unlock PIN</string>
    <string name="sim_ndp_unlock_text">Unlock</string>
    <string name="sim_ndp_dismiss_text">Dismiss</string>
    <string name="requesting_unlock">Requesting network unlock\u2026</string>
    <string name="unlock_failed">Network unlock request unsuccessful.</string>
    <string name="unlock_success">Network unlock successful.</string>
    <string name="labelGSMMore">GSM call settings</string>
    <string name="labelCDMAMore">CDMA call settings</string>
    <string name="apn_settings">Access Point Names</string>
    <string name="settings_label">Network settings</string>
    <string name="voicemail">Voicemail</string>
    <string name="voicemail_abbreviated">VM:</string>
    <string name="networks">Network operators</string>
    <string name="call_settings">Call settings</string>
    <string name="additional_gsm_call_settings">Additional settings</string>
    <string name="sum_gsm_call_settings">Additional GSM only call settings</string>
    <string name="additional_cdma_call_settings">Additional CDMA call settings</string>
    <string name="sum_cdma_call_settings">Additional CDMA only call settings</string>
    <string name="labelNwService">Network service settings</string>
    <string name="labelCallerId">Caller ID</string>
    <string name="sum_loading_settings">Loading settings\u2026</string>
    <string name="sum_hide_caller_id">Number hidden in outgoing calls</string>
    <string name="sum_show_caller_id">Number displayed in outgoing calls</string>
    <string name="sum_default_caller_id">Use default operator settings to display my number in outgoing calls</string>
    <string name="labelCW">Call waiting</string>
    <string name="sum_cw_enabled">During a call, notify me of incoming calls</string>
    <string name="sum_cw_disabled">During a call, notify me of incoming calls</string>
    <string name="call_forwarding_settings">Call forwarding settings</string>
    <string name="labelCF">Call forwarding</string>
    <string name="labelCFU">Always forward</string>
    <string name="messageCFU">Always use this number</string>
    <string name="sum_cfu_enabled_indicator">Forwarding all calls</string>
    <string name="sum_cfu_enabled">Forwarding all calls to <xliff:g id="phonenumber" example="555-1212">{0}</xliff:g></string>
    <string name="sum_cfu_enabled_no_number">Number is unavailable</string>
    <string name="sum_cfu_disabled">Disabled</string>
    <string name="labelCFB">Forward when busy</string>
    <string name="messageCFB">Number when busy</string>
    <string name="sum_cfb_disabled">Disabled</string>
    <string name="disable_cfb_forbidden">Your operator doesn\'t support disabling call forwarding when your phone is busy.</string>
    <string name="labelCFNRy">Forward when unanswered</string>
    <string name="messageCFNRy">Number when unanswered</string>
    <string name="sum_cfnry_enabled">Forwarding to <xliff:g id="phonenumber" example="555-1212">{0}</xliff:g></string>
    <string name="sum_cfnry_disabled">Disabled</string>
    <string name="disable_cfnry_forbidden">Your operator doesn\'t support disabling call forwarding when your phone doesn\'t answer.</string>
    <string name="labelCFNRc">Forward when unreachable</string>
    <string name="messageCFNRc">Number when unreachable</string>
    <string name="sum_cfnrc_enabled">Forwarding to <xliff:g id="phonenumber" example="555-1212">{0}</xliff:g></string>
    <string name="sum_cfnrc_disabled">Disabled</string>
    <string name="disable_cfnrc_forbidden">Your carrier doesn\'t support disabling call forwarding when your phone is unreachable.</string>
    <string name="updating_title">Call settings</string>
    <string name="error_updating_title">Call settings error</string>
    <string name="reading_settings">Reading settings\u2026</string>
    <string name="updating_settings">Updating settings\u2026</string>
    <string name="reverting_settings">Reverting settings\u2026</string>
    <string name="description_image_button_one">one</string>
    <string name="description_image_button_two">two</string>
    <string name="description_image_button_three">three</string>
    <string name="description_image_button_four">four</string>
    <string name="description_image_button_five">five</string>
    <string name="description_image_button_six">six</string>
    <string name="description_image_button_seven">seven</string>
    <string name="description_image_button_eight">eight</string>
    <string name="description_image_button_nine">nine</string>
    <string name="description_image_button_star">star</string>
    <string name="description_image_button_zero">zero</string>
    <string name="description_image_button_pound">pound</string>
    <string name="description_dial_button">dial</string>
    <string name="description_delete_button">backspace</string>
</resources>