<!--
  Property of IT Man AS, Bryne Norway
  (c) 2015 IT Man AS
  Created by Nigussie on 03.03.2015.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
<!--item android:id="@+id/network_setting"
        android:title="@string/action_settings7"
        android:orderInCategory="100"
        app:showAsAction="never" /-->
    <item android:id="@+id/about"
        android:title="About"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/setting"
        android:title="@string/action_settings2"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/terms"
        android:title="@string/action_settings4"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/cancel_service"
        android:title="@string/action_settings5"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/privacy_policy"
        android:title="@string/action_settings6"
        android:orderInCategory="100"
        app:showAsAction="never" >
    </item>
    <item android:id="@+id/logout"
        android:title="@string/action_settings3"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>
