<!--
  Property of IT Man AS, Bryne Norway It is strictly forbidden to copy or modify the authors file, however it is possible to
  use the open source libraries under the GNU licence protocols terms.
  © 2015 IT Man AS
  Created by Nigussie on 03.03.2015.
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MyKeyboard">
    <item android:id="@+id/inboxsms"
        android:title="@string/sms_menu1"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/outboxsms"
        android:title="@string/sms_menu2"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/deletesms"
        android:title="@string/sms_menu3"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>
