<?xml version="1.0" encoding="utf-8"?>
<!--
  Property of IT Man AS, Bryne Norway It is strictly forbidden to copy or modify the authors file,
  © 2015 IT Man AS
  Created by Nigussie on 03.03.2015.
-->

<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialpad"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bgimg3"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="150dp"
        android:weightSum="1"
        android:layout_marginTop="10dp"
        >

        <!--FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            -->
        <TextView
            android:text="SecureCall"
            android:textColor="@color/wallet_holo_blue_light"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:id="@+id/textView"
            />

        <EditText android:id="@+id/digits"
            android:layout_width="fill_parent"
            android:layout_marginTop="15dp"
            android:layout_height="50dp"
            android:layout_gravity="right|bottom"
            android:textSize="30dp"
            android:gravity="center"
            android:clickable="false"
            android:textColor="@color/wallet_holo_blue_light"
            />
        <TextView android:id="@+id/textViewconnected"
            android:textColor="@color/wallet_holo_blue_light"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20dp"
            android:layout_marginTop="0dp"
            android:enabled="false"
            />

        <!--ImageButton android:id="@+id/deleteButton"
            android:layout_width="0px"
            android:layout_weight="0.30"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:state_enabled="false"
            android:background="@drawable/btn_background"
            android:contentDescription="@string/description_delete_button"
            android:src="@drawable/ic_dial_action_delete" /-->
        <!--/FrameLayout-->

        <!--TextView
            android:text="Secure Connected..."
            android:textColor="@color/secondary_text_color"
            android:layout_width="fill_parent"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:textSize="15dp"
            android:gravity="center"
            style="@style/Base.TextAppearance.AppCompat" /-->

    </LinearLayout>
    <TableRow
        android:layout_height="0px"
        android:layout_weight="1"
        android:layout_marginTop="5dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        >

        <ImageButton android:id="@+id/one" style="@style/DialtactsDialpadButtonStyle"
            android:src="@drawable/dial_num_1"
            android:contentDescription="@string/description_image_button_one"
            android:padding="2dp"
            android:fadingEdge="horizontal"
            android:background="@drawable/imagebtn"
            />
        <View android:layout_height="90px"
            android:layout_width="10px">

        </View>
        <ImageButton android:id="@+id/two" style="@style/DialtactsDialpadButtonStyle"
            android:src="@drawable/dial_num_2"
            android:contentDescription="@string/description_image_button_two"
            android:padding="2dp"
            android:background="@drawable/imagebtn"/>
        <View android:layout_height="90px"
            android:layout_width="10px"/>
        <ImageButton android:id="@+id/three" style="@style/DialtactsDialpadButtonStyle"
            android:src="@drawable/dial_num_3"
            android:contentDescription="@string/description_image_button_three"
            android:padding="2dp"
            android:background="@drawable/imagebtn"/>
    </TableRow>
    <View android:layout_height="10px"
        android:layout_width="10px"
        />
    <TableRow
        android:layout_height="0px"
        android:layout_weight="1"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">
        <ImageButton android:id="@+id/four" style="@style/DialtactsDialpadButtonStyle"
            android:src="@drawable/dial_num_4"
            android:contentDescription="@string/description_image_button_four"
            android:background="@drawable/imagebtn"/>
        <View android:layout_height="90px"
            android:layout_width="10px">

        </View>
        <ImageButton android:id="@+id/five" style="@style/DialtactsDialpadButtonStyle"
            android:src="@drawable/dial_num_5"
            android:contentDescription="@string/description_image_button_five"
            android:background="@drawable/imagebtn"/>
        <View android:layout_height="90px"
            android:layout_width="10px">

        </View>
        <ImageButton android:id="@+id/six" style="@style/DialtactsDialpadButtonStyle"
            android:src="@drawable/dial_num_6"
            android:contentDescription="@string/description_image_button_six"
            android:background="@drawable/imagebtn"/>
    </TableRow>
    <View android:layout_height="10px"
        android:layout_width="10px"/>
    <TableRow
        android:layout_height="0px"
        android:layout_weight="1"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">
        <ImageButton android:id="@+id/seven" style="@style/DialtactsDialpadButtonStyle"
            android:src="@drawable/dial_num_7"
            android:contentDescription="@string/description_image_button_seven"
            android:background="@drawable/imagebtn"/>
        <View android:layout_height="90px"
            android:layout_width="10px">

        </View>
        <ImageButton android:id="@+id/eight" style="@style/DialtactsDialpadButtonStyle"
            android:src="@drawable/dial_num_8"
            android:contentDescription="@string/description_image_button_eight"
            android:cropToPadding="false"
            android:background="@drawable/imagebtn"/>
        <View android:layout_height="90px"
            android:layout_width="10px">

        </View>
        <ImageButton android:id="@+id/nine" style="@style/DialtactsDialpadButtonStyle"
            android:src="@drawable/dial_num_9"
            android:contentDescription="@string/description_image_button_nine"
            android:background="@drawable/imagebtn"/>
    </TableRow>
    <View android:layout_height="10px"
        android:layout_width="10px"/>
    <TableRow
        android:layout_height="0px"
        android:layout_weight="1"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">
        <ImageButton android:id="@+id/star" style="@style/DialtactsDialpadButtonStyle"
            android:src="@drawable/dial_num_star"
            android:contentDescription="@string/description_image_button_star"
            android:background="@drawable/imagebtn"/>
        <View android:layout_height="90px"
            android:layout_width="10px">
        </View>
        <ImageButton android:id="@+id/zero" style="@style/DialtactsDialpadButtonStyle"
            android:src="@drawable/dial_num_0"
            android:contentDescription="@string/description_image_button_zero"
            android:background="@drawable/imagebtn"/>
        <View android:layout_height="90px"
            android:layout_width="10px">
        </View>
        <ImageButton android:id="@+id/pound" style="@style/DialtactsDialpadButtonStyle"
            android:src="@drawable/dial_num_pound"
            android:contentDescription="@string/description_image_button_pound"
            android:background="@drawable/imagebtn"/>
    </TableRow>
    <View android:layout_height="15px"
        android:layout_width="10px"/>
    <include layout="@layout/dialpad_aditional_endcall"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        />

</TableLayout>
